[tool.poetry]
name = "plotter"
version = "0.1.0"
description = ""
authors = ["pr_admin <pradmin@numerator.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
